Bug 1091297 - http age calculation wrongly assumed monotonic time. r=hurley